<RelativeLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#cccccc"
    android:padding="10dp">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/banner"
        android:contentDescription="@string/edj_logo"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false"
        android:layout_marginBottom="19dp"
        android:layout_alignParentLeft="false"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/hostname_ip"
            android:id="@+id/textView"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtHostnameIP"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:singleLine="true" />
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/connectbtn"
        android:id="@+id/btnConnect"
        android:background="@color/edjpurple"
        android:textColor="#ffffff"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:enabled="true" />
</RelativeLayout>